--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
-recursive-include ps_crud/templates *.jinja2
-include requirements.txt
 include README.rst
+include requirements.txt
+recursive-include ps_crud/static    *
+recursive-include ps_crud/templates *.jinja2
