Added Internalization issue sacrud/pyramid_sacrud#127

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,7 @@
 include README.rst
+include CHANGES.rst
 include requirements.txt
+include message-extraction.ini
+recursive-include ps_crud/locale    *
 recursive-include ps_crud/static    *
 recursive-include ps_crud/templates *.jinja2
